--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,6 +5,8 @@ on:
     branches: ["main"]
     tags: ["v*", "release-*"]
   pull_request:
+    branches: ["main"]
+    types: [opened, synchronize, reopened]
 
 permissions:
   contents: read
@@ -15,6 +17,13 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      # Build faster on PRs (single arch), full multi-arch on main/tags
+      PLATFORMS: ${{ github.event_name == 'pull_request' && 'linux/amd64' || 'linux/amd64,linux/arm64' }}
+
+    concurrency:
+      group: docker-publish-${{ github.ref || github.head_ref }}
+      cancel-in-progress: true
 
     steps:
       - name: Checkout
@@ -49,7 +58,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ env.PLATFORMS }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
