--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,18 @@
 services:
+  # One-time init to fix volume ownership for non-root runtime
+  xmatches-init:
+    image: busybox:1.36
+    command: ["sh","-c","chown -R 65532:65532 /data"]
+    volumes:
+      - xmatches-data:/data
+    restart: "no"
+
   xmatches:
     image: xaitan/x-matches:latest
     platform: ${PLATFORM:-linux/arm64}
+    depends_on:
+      xmatches-init:
+        condition: service_completed_successfully
     ports:
       - "8080:8080"
     environment:
