--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.24.x'
+          go-version: '1.23.x'
 
       - name: Cache Go modules
         uses: actions/cache@v4
@@ -33,11 +33,16 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Download deps
+        env:
+          GOTOOLCHAIN: local
         run: go mod download
 
       - name: Install gosec
+        env:
+          GOTOOLCHAIN: local
         run: go install github.com/securego/gosec/v2/cmd/gosec@v2.21.0
 
       - name: Run gosec
+        env:
+          GOTOOLCHAIN: local
         run: $(go env GOPATH)/bin/gosec ./...
-
