--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,8 +1,14 @@
 name: Build & Publish Docker (multi-arch)
 
 on:
-  # Disabled auto-publish during testing; run manually if needed
+  # Manual trigger with push toggle
   workflow_dispatch:
+    inputs:
+      push:
+        description: "Push to Docker Hub?"
+        required: true
+        default: false
+        type: boolean
 
 permissions:
   contents: read
@@ -55,15 +61,20 @@ jobs:
           fi
           echo "EOF" >> $GITHUB_OUTPUT
 
-      # Login step omitted while push is disabled
+      - name: Login to Docker Hub
+        if: inputs.push == true
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build (no push during testing)
+      - name: Build & optionally push
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           platforms: ${{ env.PLATFORMS }}
-          push: false
+          push: ${{ inputs.push }}
           provenance: false
           sbom: false
           tags: ${{ steps.tags.outputs.list }}
